[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/InterationConfig.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/ConfigValueSelector.tscn" type="PackedScene" id=2]

[node name="InterationConfig" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 20.0

[node name="DropDown" type="OptionButton" parent="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Finite" type="VBoxContainer" parent="."]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 78.0

[node name="NumSimulationsValueSelector" parent="Finite" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 1024.0
label = "Number of Simulations"
min_value = 1.0
max_value = 100.0
step = 1.0

[node name="IterationLengthValueSelector" parent="Finite" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 54.0
label = "Iteration Length"
min_value = 10.0
max_value = 500.0
step = 1.0
[connection signal="item_selected" from="HBoxContainer/DropDown" to="." method="_on_DropDown_item_selected"]
